<resources>
    <string name="app_name">E-Catalog</string>
    <string name="action_settings">Settings</string>

    <string name="menu_catalog">Katalog Buku</string>
    <string name="menu_ebook">Buku Elektronik</string>
    <string name="menu_web">Web Pembelajaran</string>
    <string name="content_description">just content description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="references">References</string>
    <string name="example">Examples</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_study">Belajar</string>
    <string name="belajar">Belajar</string>
</resources>