<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_library_books"
            android:title="@string/menu_catalog" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_book_online"
            android:title="@string/menu_ebook" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_web"
            android:title="@string/menu_web" />
        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/ic_book"
            android:title="@string/belajar" />
    </group>
</menu>