<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.siperi.ui.catalog.CatalogFragment"
        android:label="@string/menu_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.siperi.ui.gallery.EbookFragment"
        android:label="@string/menu_ebook"
        tools:layout="@layout/fragment_ebook" />

    <fragment
        android:id="@+id/nav_web"
        android:name="com.siperi.ui.slideshow.WebFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web" />

    <fragment
        android:id="@+id/nav_study"
        android:name="com.siperi.ui.study.StudyFragment"
        android:label="@string/menu_study"
        tools:layout="@layout/fragment_study" />

</navigation>